# PlaTwo

./: CMakeLists.txt
Client/: CMakeLists.txt  main.cpp
Client/Presentation/CreateRoom/: CreateRoomPage.cpp  CreateRoomPage.h  CreateRoomPage.ui  QTCreateRoomPresenter.cpp  QTCreateRoomPresenter.h
Client/Presentation/Dots & Boxes/: dotspage.cpp  dotspage.h  dotspage.ui
Client/Presentation/EditProfile/: editprofilepage.cpp  editprofilepage.h  editprofilepage.ui  qteditprofilepresenter.cpp  qteditprofilepresenter.h
Client/Presentation/GameMenu/: gamemenupage.cpp  gamemenupage.h  gamemenupage.ui
Client/Presentation/JoinRoom/: JoinRoomPage.cpp  JoinRoomPage.h  JoinRoomPage.ui  QTJoinRoomPresenter.cpp  QTJoinRoomPresenter.h
Client/Presentation/Lobby/: lobbypage.cpp  lobbypage.h  lobbypage.ui
Client/Presentation/Login/: QtLoginpresenter.cpp  QtLoginpresenter.h  loginpage.cpp  loginpage.h  loginpage.ui
Client/Presentation/MainMenu/: mainmenupage.cpp  mainmenupage.h  mainmenupage.ui
Client/Presentation/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Client/Presentation/ResetPassword/: QTResetPasswordPresenter.cpp  QTResetPasswordPresenter.h  resetpasswordpage.cpp  resetpasswordpage.h  resetpasswordpage.ui
Client/Presentation/SignUp/: QTSignupPresenter.cpp  QTSignupPresenter.h  signuppage.cpp  signuppage.h  signuppage.ui
Client/Presentation/WaitingRoom/: QTWaitingRoomPresenter.cpp  QTWaitingRoomPresenter.h  WaitingRoomPage.cpp  WaitingRoomPage.h  WaitingRoomPage.ui
Core/: CMakeLists.txt
Core/Application/DTO/Auth/: EditProfileRequest.h  ResetPasswordDTO.h  SignUpDTO.h
Core/Application/DTO/Lobby/: CreateRoomDTO.h
Core/Application/UseCases/CreateRoom/: CreateRoomUseCase.cpp  CreateRoomUseCase.h
Core/Application/UseCases/EditProfile/: editprofileusecase.cpp  editprofileusecase.h  loadeditprofileusecase.cpp  loadeditprofileusecase.h
Core/Application/UseCases/JoinRoom/: JoinRoomUseCase.cpp  JoinRoomUseCase.h
Core/Application/UseCases/Login/: loginusecase.cpp  loginusecase.h
Core/Application/UseCases/ResetPassword/: ResetPasswordUseCase.cpp  ResetPasswordUsecase.h
Core/Application/UseCases/SignUp/: SignUpUseCase.cpp  SignUpUseCase.h
Core/Application/UseCases/WaitingRoom/: WaitingRoomUseCase.cpp  WaitingRoomUseCase.h
Core/Domain/Entities/: GameSession.cpp  GameSession.h  History.cpp  History.h  Match.cpp  Match.h  Player.cpp  Player.h  Room.cpp  Room.h  User.cpp  User.h  authenticateduser.cpp  authenticateduser.h
Core/Domain/Enums/: Enums.h
Core/Domain/Exceptions/: Exceptions.cpp  Exceptions.h
Core/Domain/Games/: Imove.h  gamesetting.cpp  gamesetting.h  iboard.cpp  iboard.h  igame.cpp  igame.h  iruleengine.cpp  iruleengine.h
Core/Domain/Games/Dots & Boxes/: dotsboard.cpp  dotsboard.h  dotsgame.cpp  dotsgame.h  dotsmove.cpp  dotsmove.h  dotsruleengine.cpp  dotsruleengine.h
Core/Domain/Interfaces/Repositories/: IGameRepository.h  IHistoryRepository.h  IRoomRepository.h  IUserRepository.h
Core/Domain/Interfaces/Services/: ICreateRoomPresenter.h  IHasher.h  IJoinRoomPresenter.h  ILogger.h  INetworkGateway.h  INetworkServer.h  IResetPasswordPresenter.h  ISignupPresenter.h  IWaitingRoomPresenter.h  ieditprofilepresenter.h  iloginpresenter.h  inetworkclient.cpp  inetworkclient.h  isessioncontext.cpp  isessioncontext.h
Core/Domain/ValueObjects/: Coordinate.cpp  Coordinate.h  Email.cpp  Email.h  Name.cpp  Name.h  Password.cpp  Password.h  PasswordHash.cpp  PasswordHash.h  PhoneNumber.cpp  PhoneNumber.h  UserName.cpp  UserName.h
Core/Shared/Constants/: Constants.h
Infrastructure/: CMakeLists.txt  sessioncontext.cpp  sessioncontext.h
Infrastructure/DataBase/: databasemanager.cpp  databasemanager.h
Infrastructure/Encryption/: Argon2ID.cpp  Argon2ID.h
Infrastructure/Manager/: RoomManager.cpp  RoomManager.h
Infrastructure/Network/Client/: qtcpnetworkclient.cpp  qtcpnetworkclient.h
Infrastructure/Network/Packet/: authenticatepacket.cpp  authenticatepacket.h  choosecolorpacket.cpp  choosecolorpacket.h  createroompacket.cpp  createroompacket.h  joinroompacket.cpp  joinroompacket.h  loadgamepacket.cpp  loadgamepacket.h  makemovepacket.cpp  makemovepacket.h  packet.cpp  packet.h  readyplayerpacket.cpp  readyplayerpacket.h  savegamepacket.cpp  savegamepacket.h
Infrastructure/Network/Server/: qtcpnetworkserver.cpp  qtcpnetworkserver.h
Infrastructure/Repository/: sqliteuserrepository.cpp  sqliteuserrepository.h
Infrastructure/Session/: clientsession.cpp  clientsession.h  sessionmanager.cpp  sessionmanager.h
Server/: CMakeLists.txt  main.cpp
